[package]
name = "rust-xfinal-macro"
version = "0.1.2"
edition = "2021"
homepage = "https://github.com/xmh0511/rust-xfinal-macro"
repository = "https://github.com/xmh0511/rust-xfinal-macro"
license = "MIT OR Apache-2.0"
description = "macro utilities for rust-xfinal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
proc-macro=true
